--- a/src/css/index.css
+++ b/src/css/index.css
@@ -94,6 +94,23 @@ img {
   color: #2e2f42;
 }
 
+.input-timer:disabled {
+  background: #fafafa;
+  color: #808080;
+  border: 1px solid #808080;
+}
+
+.input-timer:hover {
+  border: 1px solid #000;
+  color: #2e2f42;
+}
+
+.input-timer:focus {
+  border-color: #4e75ff;
+  color: #000;
+  box-shadow: 0 0 5px rgba(37, 18, 249, 0.933);
+}
+
 .button {
   border-radius: 8px;
   padding: 8px 16px;
@@ -144,5 +161,69 @@ img {
 /* ================ /TIMER ================ */
 
 /* ================ SNACKBAR ================ */
+
+.form {
+  padding: 50px 210px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+}
+.labelS {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  width: 330px;
+}
+
+.input-delay {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 330px;
+  padding: 8px 16px;
+}
+
+.fieldset {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  border-radius: 4px;
+  stroke-width: 1px;
+  stroke: #808080;
+  width: 360px;
+  padding: 24px 0px 8px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  background-color: #fff;
+  margin-top: 16px;
+}
+
+.button-create {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+  background: #4e75ff;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  margin-top: 24px;
+  border: 0px;
+}
+
+.button-create:hover {
+  background: #6c8cff;
+}
 
 /* ================ /SNACKBAR ================ */
